k8s/income/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: income-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: income              # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: income               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: income:latest       # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: income           # ім'я контейнеру
          ports:
            - containerPort: 80  # порт по якому можна звертатись до поди
