k8s/income/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: income-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/income-app/
            pathType: "Prefix"
            backend:
              service:
                name: income-service
                port:
                  number: 80
